# self-signed

./: .clang-format  .gitignore  CMakeLists.txt  README.md  about.html  app.tsx  compile_commands.json  esbuild.js  ext_key_usage_options.tsx  file-saver.d.ts  index-ENZOC5WK.js  index.html  interface.cpp  interface_error.hpp  interface_ext_key_usage.hpp  interface_key.hpp  key_usage.ts  key_usage_options.tsx  mbedtls_config.h  new.hpp  opt.hpp  package.json  prerender.tsx  san_input.tsx  sheet.css  sign-W4OANS2I.wasm  tsconfig.json  uniqptr.hpp  usage.html  validity.tsx  write_cert.hpp
frontend/: CMakeLists.txt  app.tsx  cert_maker.ts  certificate_input.tsx  comms.ts  esbuild.js  ext_key_usage.ts  globals.d.ts  index.html  index.tsx  interface_error.ts  is_client.ts  key_options.ts  md_options.ts  package-lock.json  package.json  rcomms.ts  readme.ts  san_input.tsx  san_list.ts  sheet.css  wcomms.ts  zipwriter.ts
frontend/pages/: about.md  usage.md
src/: CMakeLists.txt  cert.hpp  cert_ext.cpp  cert_ext.hpp  comms.hpp  copying.cpp  cstr.hpp  interface.cpp  interface_error.hpp  interface_ext_key_usage.cpp  interface_ext_key_usage.hpp  interface_key.cpp  interface_key_usage.hpp  interface_md.hpp  interface_san.cpp  interface_san.hpp  mbedtls_config.h  new.cpp  opt.hpp  random.hpp  rcomms.hpp  wcomms.hpp
tc/: clang-wasi.cmake
